Aulas/force-app/main/default/objects/ProdutoPedido__c/ProdutoPedido__c.object-meta.xml
<CustomObject>
    <label>Produto do Pedido</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos dos Pedidos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>