Aulas/force-app/main/default/objects/ProdutoPedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>