Aulas/force-app/main/default/objects/ProdutoPedido__c/fields/Pendencia__c.field-meta.xml
<CustomField>
    <fullName>Pendencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pendência</label>
    <type>Checkbox</type>
</CustomField>