Aulas/force-app/main/default/objects/ProdutoPedido__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <referenceTo>Produto__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>